--- a/piggyevest.css
+++ b/piggyevest.css
@@ -194,6 +194,20 @@ footer a:hover{color: rgb(0, 0, 255);}
 
 .join{width: 550px;}
 
+@media screen and (max-width: 1280px) {
+.img-child4 {top: 102px; right: -21px;}
+
+.img-child5 {top: 287px; right: -21px;}
+
+.img-child6 {top: 455px; right: -21px;}
+
+.img-child1 {top: 105px; right: 412px;}
+
+.img-child2 {top: 248px; right: 422px;}
+
+.img-child3 {top: 390px; right: 437px;}
+}
+
 @media screen and (max-width: 1114px) {
     .brands{gap:20px}
 
